move contact list page to use a data table and other other fixes
- remove some unneeded styles
- fix person profile spouse bug
- fix first name bug
- use vuetify out of the box search instead of js-worker-search
- add phone number formatting
- remove extra columns on mobile

--- a/assets/style/app.styl
+++ b/assets/style/app.styl
@@ -27,27 +27,3 @@ input[type="file"]
     &.sticky-bottom
       position: absolute;
       bottom: 10px;
-
-.guestPage
-  .list
-    &__tile
-      &--avatar
-        .avatar
-          .letter
-            -webkit-box-align: center;
-            -ms-flex-align: center;
-            align-items: center;
-            display: -webkit-inline-box;
-            display: -ms-inline-flexbox;
-            display: inline-flex;
-            -webkit-box-pack: center;
-            -ms-flex-pack: center;
-            justify-content: center;
-            text-align: center;
-            vertical-align: middle;
-            border-radius: 50%;
-            height: 48px;
-            width: 48px;
-          img
-            height: 48px;
-            width: 48px;
